[package]
name = "eve_bash_signal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
tungstenite = {version = "0.17.2", features = ["native-tls"]}
url = "2.2.2"
serde_json = {version = "1.0.81"}
serde = {version = "1.0.137", features = ["derive"]}